--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About & Apply · The Bus School</title>
+  <title>About · The Bus School</title>
   <meta name="theme-color" content="#c7a24b" />
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
@@ -13,17 +13,16 @@
       <div class="brand" role="banner">
         <div class="logo" aria-hidden="true"></div>
         <div class="name" aria-label="The Bus School LLC">The Bus School LLC</div>
-        <div class="sub" aria-label="A Brisbon Transportation Group Company" style="margin-left:auto;">A Brisbon Transportation Group Company</div>
       </div>
       
 <nav aria-label="Primary">
   <ul class="nav">
     <li><a href="/index.html" aria-label="Home">Home</a></li>
+    <li><a href="/about.html" aria-label="About The Bus School">About</a></li>
     <li><a href="/training.html" aria-label="Training">Training</a></li>
-    <li><a href="/endorsements.html" aria-label="Endorsements">Endorsements</a></li>
     <li><a href="/funding.html" aria-label="Funding">Funding</a></li>
+    <li><a href="/endorsements.html" aria-label="Endorsements">Endorsements</a></li>
     <li><a href="/contact.html" aria-label="Contact The Bus School">Contact</a></li>
-    <li><a href="/about.html" aria-label="About and Apply">About &amp; Apply</a></li>
   </ul>
 </nav>
 
@@ -31,8 +30,12 @@
   </header>
   <main id="main" tabindex="-1" class="container">
     
-<h1>About &amp; Apply</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing e…</p>
+<h1>About The Bus School</h1>
+<p>We’re dedicated to helping students build long‑term success through high‑quality, hands‑on CDL training programs in North Carolina.</p>
+
+<h2>Our Mission</h2>
+<p>To provide affordable, accessible, and employer‑aligned training for the next generation of commercial drivers.</p>
+
 <img src="/assets/images/facility-placeholder.jpg" width="1280" height="720"
      alt="Exterior view of The Bus School training facility" />
 
@@ -48,9 +51,7 @@
     </div>
     <div>
       <h4>Connect</h4>
-      <ul>
-        <li><a href="/contact.html" aria-label="Contact Us link">Contact Us</a></li>
-      </ul>
+      <ul><li><a href="/contact.html" aria-label="Contact Us link">Contact Us</a></li></ul>
     </div>
   </div>
   <p class="tagline">© 2025 The Bus School LLC · A Brisbon Transportation Group Company.</p>
