--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
       <div class="brand" role="banner">
         <div class="logo" aria-hidden="true"></div>
         <div class="name" aria-label="The Bus School LLC">The Bus School LLC</div>
-        <div class="sub" aria-label="A Brisbon Transportation Group Company" style="margin-left:auto;">A Brisbon Transportation Group Company</div>
       </div>
       
 <nav aria-label="Primary">
   <ul class="nav">
     <li><a href="/index.html" aria-label="Home">Home</a></li>
+    <li><a href="/about.html" aria-label="About The Bus School">About</a></li>
     <li><a href="/training.html" aria-label="Training">Training</a></li>
-    <li><a href="/endorsements.html" aria-label="Endorsements">Endorsements</a></li>
     <li><a href="/funding.html" aria-label="Funding">Funding</a></li>
+    <li><a href="/endorsements.html" aria-label="Endorsements">Endorsements</a></li>
     <li><a href="/contact.html" aria-label="Contact The Bus School">Contact</a></li>
-    <li><a href="/about.html" aria-label="About and Apply">About &amp; Apply</a></li>
   </ul>
 </nav>
 
@@ -34,29 +33,39 @@
 <section class="hero">
   <img src="/assets/images/hero-placeholder.jpg" width="1280" height="720"
        alt="Yellow school bus parked outside a training facility" />
-  <h1>Launch your CDL career</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut lab…</p>
+  <h1>Drive Your Future Forward</h1>
+  <p>Professional CDL &amp; Passenger Training in the Raleigh–Durham area.</p>
+  <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(220px, max-content));">
+    <a href="/training.html" class="card" role="button" aria-label="View Programs">
+      <strong>View Programs</strong>
+    </a>
+    <a href="/funding.html" class="card" role="button" aria-label="Funding Options">
+      <strong>Funding Options</strong>
+    </a>
+  </div>
 </section>
 
 <section class="grid" aria-label="Highlights">
   <article class="card">
-    <img src="/assets/images/training-placeholder.jpg" width="1280" height="720"
-         alt="Instructor guiding a student during CDL yard training" />
-    <h2>Hands-on Training</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit.…</p>
+    <h2>Employer-Aligned</h2>
+    <p>Our curriculum is built in partnership with local carriers to ensure graduates are job‑ready.</p>
   </article>
   <article class="card">
-    <img src="/assets/images/passenger-placeholder.jpg" width="1280" height="720"
-         alt="Passengers boarding a bus safely at a stop" />
-    <h2>Passenger Endorsements</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit.…</p>
+    <h2>Flexible Schedules</h2>
+    <p>Evening and weekend options available to fit your life.</p>
   </article>
   <article class="card">
-    <img src="/assets/images/funding-placeholder.jpg" width="1280" height="720"
-         alt="Student receiving funding consultation at a desk" />
     <h2>Funding Options</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit.…</p>
+    <p>We help you explore state workforce funding and payment plans.</p>
   </article>
+</section>
+
+<hr style="margin:2rem 0; border:0; border-top:1px solid #222" />
+
+<section class="card" style="text-align:center; padding:2rem 1.5rem;">
+  <h2>Ready to Start?</h2>
+  <p>Apply now and take the first step toward a CDL career.</p>
+  <p><a class="primary" href="/about.html#apply" aria-label="Start Application"><button class="primary" type="button">Start Application</button></a></p>
 </section>
 
   </main>
@@ -71,9 +80,7 @@
     </div>
     <div>
       <h4>Connect</h4>
-      <ul>
-        <li><a href="/contact.html" aria-label="Contact Us link">Contact Us</a></li>
-      </ul>
+      <ul><li><a href="/contact.html" aria-label="Contact Us link">Contact Us</a></li></ul>
     </div>
   </div>
   <p class="tagline">© 2025 The Bus School LLC · A Brisbon Transportation Group Company.</p>
