--- a/funding.html
+++ b/funding.html
@@ -13,17 +13,16 @@
       <div class="brand" role="banner">
         <div class="logo" aria-hidden="true"></div>
         <div class="name" aria-label="The Bus School LLC">The Bus School LLC</div>
-        <div class="sub" aria-label="A Brisbon Transportation Group Company" style="margin-left:auto;">A Brisbon Transportation Group Company</div>
       </div>
       
 <nav aria-label="Primary">
   <ul class="nav">
     <li><a href="/index.html" aria-label="Home">Home</a></li>
+    <li><a href="/about.html" aria-label="About The Bus School">About</a></li>
     <li><a href="/training.html" aria-label="Training">Training</a></li>
-    <li><a href="/endorsements.html" aria-label="Endorsements">Endorsements</a></li>
     <li><a href="/funding.html" aria-label="Funding">Funding</a></li>
+    <li><a href="/endorsements.html" aria-label="Endorsements">Endorsements</a></li>
     <li><a href="/contact.html" aria-label="Contact The Bus School">Contact</a></li>
-    <li><a href="/about.html" aria-label="About and Apply">About &amp; Apply</a></li>
   </ul>
 </nav>
 
@@ -31,10 +30,13 @@
   </header>
   <main id="main" tabindex="-1" class="container">
     
-<h1>Funding</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing e…</p>
-<img src="/assets/images/funding-placeholder.jpg" width="1280" height="720"
-     alt="Advisor explaining tuition assistance programs" />
+<h1>Funding Your Training</h1>
+<p>We help students access multiple financial pathways to make CDL education accessible.</p>
+<ul>
+  <li>Workforce Innovation &amp; Opportunity Act (WIOA) funding</li>
+  <li>Employer sponsorships and tuition assistance</li>
+  <li>Flexible installment plans</li>
+</ul>
 
   </main>
   
@@ -48,9 +50,7 @@
     </div>
     <div>
       <h4>Connect</h4>
-      <ul>
-        <li><a href="/contact.html" aria-label="Contact Us link">Contact Us</a></li>
-      </ul>
+      <ul><li><a href="/contact.html" aria-label="Contact Us link">Contact Us</a></li></ul>
     </div>
   </div>
   <p class="tagline">© 2025 The Bus School LLC · A Brisbon Transportation Group Company.</p>
